# anonymity

./: .gitignore  GEODE_DESIGN.md  README.md  asset-manifest.json  index.html
.github/workflows/: check.yml  staging.deploy.yaml
chain/: Cargo.toml  Dockerfile  README.md
chain/node/src/: chain_spec.rs
chain/pallets/democracy/: Cargo.toml
chain/pallets/democracy/src/: lib.rs  types.rs  vote.rs  weights.rs
chain/pallets/democracy/src/tests/: delegation.rs
chain/runtime/: Cargo.toml
chain/runtime/src/: lib.rs
front-end/: .env.sample  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  package.json  tsconfig.json
front-end/public/: index.html
front-end/src/: App.test.tsx  App.tsx  import-png.d.ts  index.tsx  types.ts
front-end/src/assets/: privacy-policy.ts  terms-and-conditions.ts  terms-of-website.ts
front-end/src/components/: Apollo.tsx  Balance.tsx  BlockCountdown.tsx  BlocksToTime.tsx  ContentForm.tsx  DefaultAddressInfoBox.tsx  DiscussionCard.tsx  EditablePostContent.tsx  ExtensionNotDetected.tsx  (+11 more)
static/css/: 2.4ef052d6.chunk.css  2.4ef052d6.chunk.css.map  2.5639be9c.chunk.css  2.5639be9c.chunk.css.map  2.5f1b4c00.chunk.css  2.5f1b4c00.chunk.css.map  2.6b5eb10c.chunk.css  2.6b5eb10c.chunk.css.map  2.d95a8595.chunk.css  2.d95a8595.chunk.css.map  2.debc5d9d.chunk.css  2.debc5d9d.chunk.css.map  2.e9764418.chunk.css  2.e9764418.chunk.css.map  main.fb25ffb6.chunk.css  main.fb25ffb6.chunk.css.map
static/js/: 2.31c4a215.chunk.js  2.420b0a6b.chunk.js  2.5081339c.chunk.js  2.657813f9.chunk.js  2.a91a9d68.chunk.js  2.b417297b.chunk.js  2.b8801e3c.chunk.js  2.b8801e3c.chunk.js.LICENSE.txt  2.c0ab6972.chunk.js  2.c0ab6972.chunk.js.LICENSE.txt  2.ca64a344.chunk.js  2.d3b9ea75.chunk.js  2.fae9efc6.chunk.js  2.fae9efc6.chunk.js.LICENSE.txt  main.06e737c9.chunk.js  main.06e737c9.chunk.js.map  main.0c338a48.chunk.js  main.0c338a48.chunk.js.map  main.18ca07b4.chunk.js  main.18ca07b4.chunk.js.map  main.1bb6dc43.chunk.js  main.1bb6dc43.chunk.js.map  main.2e895c7d.chunk.js  main.2e895c7d.chunk.js.map  main.37b307ea.chunk.js  main.37b307ea.chunk.js.map  main.3e7793f4.chunk.js  main.3e7793f4.chunk.js.map  main.51a5a321.chunk.js  main.51a5a321.chunk.js.map  main.61403c02.chunk.js  main.61403c02.chunk.js.map  main.74490a1e.chunk.js  main.74490a1e.chunk.js.map  main.8882cdac.chunk.js  main.8882cdac.chunk.js.map  main.8f4506f0.chunk.js  main.8f4506f0.chunk.js.map  main.d0b8c787.chunk.js  main.d0b8c787.chunk.js.map  (+16 more)
(+263 files in other folders)
